<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 * SemiColon
 *
 * © 2018 by Axel Ország-Krisz Dr.
 *
 * ===
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * ===
 *
 * For more information and source check out:
 *
 * https://github.com/okaxel/udacitySemiColon
 *
-->
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/add_repo_coordinator"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.AddRepoActivity">
<android.support.design.widget.AppBarLayout
    android:id="@+id/add_repo_appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.SemiColon.AppBar">
    <android.support.v7.widget.Toolbar
        android:id="@+id/add_repo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Theme.SemiColon.Toolbar"
        app:title="@string/activity_add_repo_label"/>
</android.support.design.widget.AppBarLayout>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/Theme.SemiColon.AddRepo.CardNest">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/Theme.SemiColon.AddRepo.InfoFrame">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_add_repo_explanation"
                    style="@style/Theme.SemiColon.AddRepo.Explanation"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorTextPlaceholder"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_add_repo_owner_label"
                    style="@style/Theme.SemiColon.AddRepo.Label"/>
                <EditText
                    android:id="@+id/et_add_repo_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:hint="@string/te_add_repo_owner_hint"
                    style="@style/Theme.SemiColon.AddRepo.EditText"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_add_repo_name_label"
                    style="@style/Theme.SemiColon.AddRepo.Label"/>
                <EditText
                    android:id="@+id/et_add_repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:hint="@string/te_add_repo_name_hint"
                    style="@style/Theme.SemiColon.AddRepo.EditText"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_add_repo_alias_label"
                    style="@style/Theme.SemiColon.AddRepo.Label"/>
                <EditText
                    android:id="@+id/et_add_repo_alias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:hint="@string/te_add_repo_alias_hint"
                    style="@style/Theme.SemiColon.AddRepo.EditText"/>
                <TextView
                    android:id="@+id/add_repo_input_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="https://github.com/okaxel/SemiColon/"
                    style="@style/Theme.SemiColon.AddRepo.Result"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarStyle">
                    <Button
                        android:id="@+id/btn_add_repo_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:text="@string/btn_add_repo_no_text"
                        style="?android:attr/buttonBarStyle"/>
                    <Button
                        android:id="@+id/btn_add_repo_add"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/colorTextLight"
                        android:textStyle="bold"
                        android:text="@string/btn_add_repo_add_text"
                        style="?android:attr/buttonBarStyle"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>