<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 * SemiColon
 *
 * © 2018 by Axel Ország-Krisz Dr.
 *
 * ===
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * ===
 *
 * For more information and source check out:
 *
 * https://github.com/okaxel/udacitySemiColon
 *
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    android:padding="@dimen/widget_margin"
    android:theme="@style/Theme.SemiColon.Widget">
    <ImageView
        android:id="@+id/widget_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/widget_background"
        android:contentDescription="@string/cd_widget_background"/>
    <TextView
        android:id="@+id/widget_code_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/widget_no_updates"
        style="@style/Theme.SemiColon.Widget.FreshInfo"/>
    <TextView
        android:id="@+id/widget_quote_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/widget_code_state"
        android:layout_above="@id/widget_quote_author"
        android:autoSizeTextType="uniform"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scrollbars="vertical"
        android:text="@string/quote_placeholder"
        style="@style/Theme.SemiColon.Widget.Text"
        tools:targetApi="o" />
    <TextView
        android:id="@+id/widget_quote_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/author_placeholder"
        style="@style/Theme.SemiColon.Widget.Author"/>
</RelativeLayout>