<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 * SemiColon
 *
 * © 2018 by Axel Ország-Krisz Dr.
 *
 * ===
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * ===
 *
 * For more information and source check out:
 *
 * https://github.com/okaxel/udacitySemiColon
 *
-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/code_details_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CodeDetailsActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/code_details_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SemiColon.AppBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/code_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.SemiColon.Toolbar"
            app:title="@string/activity_code_details_label"/>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/Theme.SemiColon.CodeDetails.CardNest">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/Theme.SemiColon.CodeDetails.InfoFrame">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tv_code_details_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            tools:text="LibraryName"
                            style="@style/Theme.SemiColon.CodeDetails.Name"/>
                        <ImageButton
                            android:id="@+id/ib_code_details_delete"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:background="@android:color/transparent"
                            app:srcCompat="@drawable/ic_delete"
                            android:contentDescription="@string/cd_code_details_delete"/>
                        <ImageButton
                            android:id="@+id/ib_code_details_like"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:background="@android:color/transparent"
                            app:srcCompat="@drawable/ic_star_border_inactive"
                            android:contentDescription="@string/cd_code_details_not_liked"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorTextPlaceholder"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_code_details_latest_label"
                        style="@style/Theme.SemiColon.CodeDetails.Label"/>
                    <TextView
                        android:id="@+id/tv_code_details_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="v0.0.0.0 rc1-beta"
                        style="@style/Theme.SemiColon.CodeDetails.Value"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorTextPlaceholder"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_code_details_homepage_label"
                        style="@style/Theme.SemiColon.CodeDetails.Label"/>
                    <TextView
                        android:id="@+id/tv_code_details_homepage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="http://www.mylibrary.com/myproject/"
                        style="@style/Theme.SemiColon.CodeDetails.Value"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/card_code_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Theme.SemiColon.CodeDetails.VersionCard">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/Theme.SemiColon.CodeDetails.InfoFrame">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_code_details_releases"
                        style="@style/Theme.SemiColon.CodeDetails.VersionTitle"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorTextPlaceholder"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_code_details_major"
                        style="@style/Theme.SemiColon.CodeDetails.VersionLabel"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tv_code_details_version_name"
                            style="@style/Theme.SemiColon.CodeDetails.VersionName"
                            android:textStyle=""/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tv_code_details_version_number"
                            style="@style/Theme.SemiColon.CodeDetails.VersionNumber"/>
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_version_major"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listItem="@layout/recycler_version_info"
                        style="@style/Theme.SemiColon.CodeDetails.VersionRecycler"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorTextPlaceholder"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_code_details_minor"
                        style="@style/Theme.SemiColon.CodeDetails.VersionLabel"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tv_code_details_version_name"
                            style="@style/Theme.SemiColon.CodeDetails.VersionName"
                            android:textStyle=""/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tv_code_details_version_number"
                            style="@style/Theme.SemiColon.CodeDetails.VersionNumber"/>
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_version_minor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listItem="@layout/recycler_version_info"
                        style="@style/Theme.SemiColon.CodeDetails.VersionRecycler"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/tv_code_details_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/tv_code_details_no_plus_version_info"
                style="@style/Theme.SemiColon.CodeDetails.ErrorBox"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_code_details"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/cd_code_details_fab"
        app:srcCompat="@drawable/ic_share"/>
</android.support.design.widget.CoordinatorLayout>